<resources>
    <string name="app_name">Leafwell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="welcome">Welcome</string>
    <string name="signup">Don\'t have an account?\nSign Up Here</string>
    <string name="forget_password">Forget Password?</string>
    <string name="logo_desc">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAccount">Create New Account</string>
    <string name="username">username</string>
    <string name="register">Register</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="khasiat">Khasiat</string>
    <string name="cara_mengolah">Cara Mengolah</string>
    <string name="menu_1">Pencarian \n Manual</string>
    <string name="menu_2">Identifikas \n Ranaman</string>
    <string name="click_below_to_select_a_image">Tap kotak di bawah untuk memilih gambar</string>
    <string name="klasifikasi">Klasifikasi</string>
</resources>